IF(EMGU_CV_BUILD OR EMGU_CV_EXAMPLE_BUILD)

PROJECT(Emgu.CV.ML)

SET(SRC_CV_ML 
  ../CommonAssemblyInfo.cs
  *.cs 
  PInvoke/*.cs 
  PInvoke/CvType/*.cs
  Properties/*.cs)

GENERATE_DOCUMENT(${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME})
SIGN_ASSEMBLY(${CMAKE_CURRENT_SOURCE_DIR}/../Emgu.CV.snk)
ADD_CS_REFERENCES("${LIBRARY_OUTPUT_PATH}/Emgu.CV.dll;${LIBRARY_OUTPUT_PATH}/Emgu.Util.dll;System.Drawing.dll")

ADD_CS_LIBRARY(${PROJECT_NAME} "${SRC_CV_ML}" ALL)

ADD_DEPENDENCIES(${PROJECT_NAME} Emgu.CV)
INSTALL(
  FILES 
  ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}.dll 
  ${LIBRARY_OUTPUT_PATH}/${PROJECT_NAME}.xml
  DESTINATION ${CPACK_PACKAGE_CLI_FOLDER}
  COMPONENT binary)

ENDIF()

