# --------------------------------------------------------
#  Copyright (C) 2004-2021 by EMGU Corporation. All rights reserved.
# --------------------------------------------------------

ADD_SUBDIRECTORY(NetStandard)
ADD_SUBDIRECTORY(NetStandard_iOS)
ADD_SUBDIRECTORY(Emgu.CV.Bitmap)
ADD_SUBDIRECTORY(DotNet)
ADD_SUBDIRECTORY(iOS)
ADD_SUBDIRECTORY(Android)
ADD_SUBDIRECTORY(Mac)

