# --------------------------------------------------------
#  Copyright (C) 2004-2022 by EMGU Corporation. All rights reserved.
# --------------------------------------------------------

ADD_SUBDIRECTORY(NetStandard)
ADD_SUBDIRECTORY(NetStandard_iOS)
ADD_SUBDIRECTORY(Emgu.CV.Bitmap)
ADD_SUBDIRECTORY(Emgu.CV.Wpf)
ADD_SUBDIRECTORY(DotNet)
ADD_SUBDIRECTORY(Xamarin)
ADD_SUBDIRECTORY(Maui)

