# --------------------------------------------------------
#  Copyright (C) 2004-2024 by EMGU Corporation. All rights reserved.
# --------------------------------------------------------


#ADD_SUBDIRECTORY(NetStandard_iOS)
#ADD_SUBDIRECTORY(Emgu.CV.Bitmap)
ADD_SUBDIRECTORY(Emgu.CV.Wpf)
ADD_SUBDIRECTORY(DotNet)
ADD_SUBDIRECTORY(Maui)

